# monik.cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
doc/: monik.json  sample_log_config.json
monik/common/: algorithm.cpp  algorithm.h  array.cpp  array.h  array_enum.h  circular_buffer.cpp  circular_buffer.h  common.h  compact_map.h  compact_set.cpp  compact_set.h  config.cpp  config.h  format.cpp  format.h  forward_queue.cpp  forward_queue.h  locale.h  map_enum.h  noncopyable.h  quantity.h  singleton.h  static.cpp  static.h  static_type.h  stdcommon.h  time_util.cpp  time_util.h  type_seq.h
monik/log/: console_log.cpp  console_log.h  file_log.cpp  file_log.h  keepalive_log.cpp  keepalive_log.h  log_buffer.cpp  log_buffer.h  log_define.cpp  log_define.h  log_thread.cpp  log_thread.h  log_util.cpp  log_util.h  logger.cpp  logger.h  logger_config.cpp  logger_config.h  message.cpp  message.h  monik_log.cpp  monik_log.h  pattern_formatter.cpp  pattern_formatter.h  remote_log.cpp  remote_log.h  spinlock.cpp  spinlock.h  thread.h  timer_thread.cpp  timer_thread.h
monik/log/protobuf/: compile.bat  compile.sh  monik.proto
monik/protobuf/: logger.json  monik.pb.cc  monik.pb.h
monik/software/: main.cpp
unix_setup/: build_openssl.sh  build_protobuf.sh  build_rabbitmq-c.sh  deploy.sh  monik_build.sh  setup_env.sh  x_deploy_Debug.sh
win_setup/: build_and_install_openssl.bat  build_openssl.bat  build_protobuf.bat  build_rabbitmq-c.bat  deploy.bat  deploy_dependencies.bat  monik_build.bat  setup_msvs_env.bat  setupenv.bat
